hphp/hack/test/typecheck/await_precedence/strong_precedence/await_new_precedence.php.exp
File "await_new_precedence.php", line 10, characters 14-15:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "await_new_precedence.php", line 8, characters 40-54:
This is why I think it is Awaitable
File "await_new_precedence.php", line 10, characters 19-20:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "await_new_precedence.php", line 8, characters 60-74:
This is why I think it is Awaitable
File "await_new_precedence.php", line 20, characters 18-19:
Invalid argument (Typing[4110])
File "await_new_precedence.php", line 17, characters 16-27:
This is an object of type Awaitable<[unresolved]>
File "await_new_precedence.php", line 19, characters 30-32:
It is incompatible with an int
File "await_new_precedence.php", line 20, characters 3-30:
This expression is of type Awaitable, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "await_new_precedence.php", line 17, characters 35-46:
This is why I think it is Awaitable
